# TermGraph

./: LICENSE.txt  README.md  pyproject.toml
src/termgraph/: __init__.py  tcolors.py  termgraph.py
tests/: test_termgraph.py
