[project]
name = "termgraph"
version = "0.0.1"
description = "Command line grphing library. Print out graphs using the command line. Prints multiple grpahs, handles different colors, and lables."
authors = [
    {name = "Yalond", email="crgiou@outlook.com"},
]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.6"

keywords = ["plot", "plotting", "graphing"]

classifiers = [
    "Topic :: Software Development"
]

# Requirements: This is done differently by poetry!
dependencies = [
]

[project.optional-dependencies]
dev = [
]

[project.urls]
homepage = "https://github.com/Yalond/termgraph"
documentation = "https://github.com/Yalond/termgraph"
repository = "https://github.com/Yalond/termgraph"

[project.scripts]
poetry = "infer_pyproject.cli:main"

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
